[package]
name = "rsapcupsdexporter"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.12.1", default-features = false, features = ["compress-gzip", "macros"] }
env_logger = "0.11.8"
log = "0.4.29"
prometheus = { version = "0.13", features = ["process"] }
tokio = { version = "1", default-features = false, features = ["time"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler
overflow-checks = false  # Disable overflow checks in release
